--- a/app/report.html
+++ b/app/report.html
@@ -9,6 +9,7 @@
   <link rel='stylesheet' href='report.css'>
 </head>
 <body>
+<button class='print'>Печать</button>
 <div id='app'></div>
 <script src='report.js'></script>
 </body>
